adding env changes

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
-DB_USER=tu_usuario
-dB_PASSWORD=tu_contraseña
+DB_USER=admin
+DB_PASSWORD=superseguro
+
+DB_NAME_SHARD=moduloContable
+
+MYSQL_REPL_USER=replicator
+MYSQL_REPL_PASSWORD=superseguro 
