--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 DB_USER=admin
-DB_PASSWORD=superseguro
+DB_PASSWORD=pass123
 
-DB_NAME_SHARD=moduloContable
+# PostgreSQL
+POSTGRES_DB_SHARD=modContable
 
-MYSQL_REPL_USER=replicator
-MYSQL_REPL_PASSWORD=superseguro 
+# MySQL
+MYSQL_DB_SHARD=modUsuarioStock
